# go-ecommerce-micro

./: .envrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  docker-compose-b.yaml  docker-compose.yaml  go.mod  go.sum
.github/workflows/: ci.yml
account/: BUILD.bazel  app.dockerfile  buf.gen.yaml  client.go  docker_build.sh  repository.go  server.go  service.go
account/account/v1/: BUILD.bazel  account.proto
account/account/v2/: BUILD.bazel  account.proto
account/account_test/: compatibility_test.go
account/cmd/account/: BUILD.bazel  main.go
account/java_client/: BUILD.bazel  JavaClient.java
account/ruby_client/: BUILD.bazel  Gemfile  main.rb
catalog/: BUILD.bazel  app.dockerfile  client.go  docker_build.sh  repository.go  server.go  service.go
catalog/catalog/v1/: BUILD.bazel  catalog.proto
catalog/cmd/catalog/: BUILD.bazel  main.go
graphql/: BUILD.bazel  Dockerfile  account_resolver.go  app.dockerfile  docker_build.sh  generated.go  gqlgen.yml  graph.go  main.go  mutation_resolver.go  query_resolver.go  schema.graphql
order/: BUILD.bazel  app.dockerfile  client.go  docker_build.sh  repository.go  server.go  service.go
order/cmd/order/: BUILD.bazel  main.go
order/order/v1/: BUILD.bazel  order.proto
tools/schema-diff/: BUILD.bazel  main.go
tools/schema-diff/diff/: diff.go
