load("@gazelle//:def.bzl", "gazelle")

gazelle(name = "gazelle")

platform(
    name = "linux_amd64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

# platform(
#     name = "macos_platform",
#     constraint_values = [
#         "@platforms//os:macos",
#         "@platforms//cpu:arm64",
#     ],
# )