module(
    name = "go-ecommerce",
    version = "0.1.0",
)

bazel_dep(name = "rules_go", version = "0.55.1")
bazel_dep(name = "gazelle", version = "0.44.0")
bazel_dep(name = "rules_proto", version = "7.1.0")

bazel_dep(name = "platforms", version = "0.0.8")


go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_99designs_gqlgen", "com_github_kelseyhightower_envconfig", "com_github_lib_pq", "com_github_olivere_elastic_v7", "com_github_segmentio_ksuid", "com_github_tinrab_retry", "com_github_vektah_gqlparser_v2", "org_golang_google_grpc", "org_golang_google_protobuf")

bazel_dep(name = "bazel_skylib", version = "1.7.1")
