load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "account",
    srcs = glob(["*.go"]),
    importpath = "github.com/VivianRMS/go-ecommerce-micro/account",
    visibility = ["//visibility:public"],
    deps = [
        "//account/account/v1:account_go_grpc",
        "@com_github_lib_pq//:pq",
        "@com_github_segmentio_ksuid//:ksuid",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//reflection",
    ],
)
