load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_go//proto:def.bzl", "go_proto_library", "go_grpc_library")
load("@rules_proto_grpc_java//:defs.bzl", "java_proto_library", "java_grpc_library")

proto_library(
    name = "account_proto",
    srcs = ["account.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@protobuf//:timestamp_proto"
    ],
)

go_proto_library(
    name = "account_go_proto",
    importpath = "github.com/VivianRMS/go-ecommerce-micro/account/gen/go/account/v2",
    proto = ":account_proto",
    visibility = ["//visibility:public"],
)

go_grpc_library(
    name = "account_go_grpc",
    importpath = "github.com/VivianRMS/go-ecommerce-micro/account/gen/go/account/v2",
    proto = ":account_proto",
    visibility = ["//visibility:public"],
)

java_proto_library(
    name = "account_java_proto",
    protos = [":account_proto"],
    visibility = ["//visibility:public"],
    importpath = "account.v1",
)

java_grpc_library(
    name = "account_java_grpc",
    protos = [":account_proto"],
    visibility = ["//visibility:public"],
    importpath = "account.v1",
)