load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "account_lib",
    srcs = ["main.go"],
    importpath = "github.com/VivianRMS/go-ecommerce-micro/account/cmd/account",
    visibility = ["//visibility:private"],
    deps = [
        "//account",
        "@com_github_kelseyhightower_envconfig//:envconfig",
        "@com_github_tinrab_retry//:retry",
    ],
)

go_binary(
    name = "account",
    embed = [":account_lib"],
    visibility = ["//visibility:public"],
)
