load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_go//proto:def.bzl", "go_proto_library", "go_grpc_library")

proto_library(
    name = "catalog_proto",
    srcs = ["catalog.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "catalog_go_proto",
    importpath = "github.com/VivianRMS/go-ecommerce-micro/catalog/gen/go/catalog/v1",
    proto = ":catalog_proto",
    visibility = ["//visibility:public"],
)

go_grpc_library(
    name = "catalog_go_grpc",
    importpath = "github.com/VivianRMS/go-ecommerce-micro/catalog/gen/go/catalog/v1",
    proto = ":catalog_proto",
    visibility = ["//visibility:public"],
)

