load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "catalog_lib",
    srcs = ["main.go"],
    importpath = "github.com/VivianRMS/go-ecommerce-micro/catalog/cmd/catalog",
    visibility = ["//visibility:private"],
    deps = [
        "//catalog",
        "@com_github_kelseyhightower_envconfig//:envconfig",
        "@com_github_tinrab_retry//:retry",
    ],
)

go_binary(
    name = "catalog",
    embed = [":catalog_lib"],
    visibility = ["//visibility:public"],
)
