load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_go//proto:def.bzl", "go_proto_library", "go_grpc_library")

proto_library(
    name = "order_proto",
    srcs = ["order.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "order_go_proto",
    importpath = "github.com/VivianRMS/go-ecommerce-micro/order/gen/go/order/v1",
    proto = ":order_proto",
    visibility = ["//visibility:public"],
)

go_grpc_library(
    name = "order_go_grpc",
    importpath = "github.com/VivianRMS/go-ecommerce-micro/order/gen/go/order/v1",
    proto = ":order_proto",
    visibility = ["//visibility:public"],
)